<resources>
    <string name="app_name">NoticePark</string>

    <string name="splash_welcome">Welcome to Notice Park!!!</string>

    <string name="app_register">User Registration</string>
    <string name="app_register_first_name">First Name</string>
    <string name="app_register_last_name">Last Name</string>
    <string name="app_register_email">Email Address</string>
    <string name="app_register_password">Password</string>
    <string name="app_register_confirm">Confirm Password</string>
    <string name="app_register_button">Register</string>
    <string name="app_register_login">Already have an Account? Login Here</string>
    <string name="title_activity_comtext_menu">ComtextMenuActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <array name="countries">
        <item>Nepal</item>
        <item>China</item>
        <item>India</item>
        <item>USA</item>
        <item>Canada</item>
        <item>Other</item>
    </array>


    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="application_login">Application Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_click_here">Dont have an account?
Click Here</string>


</resources>