<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiLangActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/application_login"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etUsername"
        android:hint="@string/enter_username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:id="@+id/btnLogin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/dont_have_an_account_click_here"
        android:id="@+id/btnRegister"/>
</LinearLayout>